--- a/individual_work/html-css-1/style.css
+++ b/individual_work/html-css-1/style.css
@@ -20,45 +20,8 @@
     justify-content: space-between;
     flex-direction: row;
     align-items: center;
-    background: #C70039;
+    background: white;
     max-width: 800px;
-    }
-    .red {
-    background-color: #C70039;
-    }
-    .flexbox3 {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    }
-    .flexbox4 {
-    display: flex;
-    max-width: 800px;
-    color: #C70039;
-    margin: auto;
-    justify-content: space-between;
-    flex-direction: row;
-    align-items: center;
-    }
-    .flexbox5 {
-    display: flex;
-    width: 800px;
-    margin: auto;
-    justify-content: space-between;
-    flex-direction: row;
-    align-items: left;
-    }
-    .blue {
-    background-color: DarkBlue;
-    }
-    .flexbox6 {
-    display: flex;
-    max-width: 800px;
-    margin: auto;
-    justify-content: space-between;
-    flex-direction: row;
-    align-items: center;   
-    color: white;
     }
     body {
     font-family: 'Oswald', sans-serif;
@@ -83,89 +46,6 @@
     line-height: 50px;
     color: white;
     }
-    .fotoflex {
-    flex: 2.5;
-    display: flex;
-    flex-direction: row;
-    justify-content: right;
-    text-align: right;
-    color: white;
-    }
-    .text1 {
-    flex: 2.2;
-    display: flex;
-    flex-direction: column;
-    justify-content: auto;
-    text-align: left;
-    color: white;
-    }
-    .text31 {
-    flex: 1;
-    display: flex;
-    }
-    .text32 {
-    flex: 5;
-    display: flex;
-    }
-    b {
-    font-size: 25px;
-    }
-    .c {
-    font-size: 20px;
-    font-weight: bold;
-    }
-    p {
-    font-size: 10px;
-    }
-    .item1 {
-    flex: 1;
-    display: flex;
-    color: black;
-    flex-direction: column;
-    text-align: justify;
-    margin: 0 5px;
-    }
-    .item2 {
-    flex: 1;
-    display: flex;
-    color: black;
-    flex-direction: column;
-    text-align: justify;
-    margin: 0 5px;
-    }
-    .item3 {
-    flex: 1;
-    display: flex;
-    color: black;
-    flex-direction: column;
-    text-align: justify;
-    margin: 0 5px;
-    }
-    .text6 {
-    flex: 4.5;
-    display: flex;
-    flex-direction: column;
-    text-align: justify; 
-    }
-    .flexfoto2 {
-    flex: 3;
-    display: flex;
-    }
-    .button {
-    background-color: #C70039; 
-    color: white; 
-    border: 0cm;
-    width: 25%;
-    height: 30px;
-    }
-
-    .button:hover {
-    background-color: white;
-    color: #C70039;
-    border: 0cm;
-    width: 25%;
-    height: 30px;
-    }
     a {
     color: white;
     text-decoration: none;
@@ -185,4 +65,14 @@
     }
     .bomb {
         font-weight: bold;
+        font-size: 20px;
+    }
+    .work {
+        flex: 1;
+    }
+    hr {
+        max-width: 800px;
+        margin-left: auto;
+        margin-right: auto;
+        border-bottom: black;
     }
